--- a/elevator/css/style.css
+++ b/elevator/css/style.css
@@ -94,7 +94,7 @@ fieldset[disabled] .btn-primary.active {
 
 .section-title h3{
     color: #666 !important;
-    /*font-style: italic;*/
+    //font-style: italic;
     font-size: 28px;
     font-family: 'Oswald', sans-serif;
     text-transform: none;
@@ -104,7 +104,7 @@ fieldset[disabled] .btn-primary.active {
     padding-bottom: 60px;
     color: #999;
     font-size: 18px;
-    /*font-style: italic;*/
+    //font-style: italic;
     font-weight: 300;
 }
 
@@ -552,7 +552,7 @@ and (max-width : 1199px) {
 .custom-tab .nav-tabs.nav-justified > .active > a:hover, 
 .custom-tab .nav-tabs.nav-justified > .active > a:focus {
     border-radius: 0;
-    /*border-left-color: transparent;*/
+    //border-left-color: transparent;
     color: #666;
     border-bottom-color: #ddd;
 }
@@ -869,7 +869,7 @@ and (max-width : 991px) {
 
 .footer-social li:hover a {
     background: #fff;
-    /*border: 1px solid #FF432E;*/
+    //border: 1px solid #FF432E;
     color: #666;
 }
 
